<resources>
    <string name="app_name">BMW Display System</string>
    <string name="live_condition">Live Condition</string>
    <string name="about">About</string>
    <string name="todo">TODO</string>
    <string name="help">Help</string>
    <string name="log">Log</string>
    <string name="carbuttons">carbuttons</string>
    <string name="title_activity_choose_conditions">chooseConditions</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="back_button">back_button</string>
    <string name="choose_condition">Choose Condition</string>
    <string name="choose_configs">Choose Configurations</string>
    <string name="next_button">TODO</string>
    <string name="next_text">NEXT</string>
    <string name="choose_text">Choose Grid</string>
    <string name="list_button" />
    <string name="Select">Select</string>
    <string name="title_activity_realtime_updates">RealtimeUpdates</string>
    <string name="live_conditions">Live Conditions</string>
    <string name="receiving_n">RECEIVING!</string>
    <string name="previous_configs">Previous Configs</string>
    <string name="about_text">In order to enhance and improve the driving experience in BMW cars in general (and BMW’s Autonomous cars in particular), drivers and car testers must understand and feel not only the condition of the environment and the traffic conditions, but also the condition of the road, e.g. fraction of the road, humidity, temperature and angle.
\n\nOur system aims to receive the conditions of the road and data collected by the car’s sensors, and provide a comfortable and elegant Android application, to graphically display the Real-time data, collected by the sensors, on a screen display attached to the car’s dashboard.
\n\nDeveloped by\n
Daher Daher     [daher928@campus.technion.ac.il]\n
Vivian Lawin    [vivlawin@campus.technion.ac.il]\n
\nSupervisor\n
Boaz Mizrahi\n
\nTechnion - Institute of Technology\n
Department of Electrical Engineering | High Speed Digital Systems Lab (HSDSL)</string>



</resources>
