<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseGrid">
    <!--    android:background="@drawable/background_image"-->

    <TextView
        android:id="@+id/choose_text"
        android:layout_width="471dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/coda"
        android:padding="2dp"
        android:text="@string/choose_text"
        android:textAllCaps="true"
        android:textColor="#AAE5FF"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.088" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.565"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497">

        <ToggleButton
            android:id="@+id/list_button"
            android:layout_width="269dp"
            android:layout_height="359dp"
            android:layout_margin="10dp"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_weight="1"
            android:background="@drawable/list_grid_button"
            android:contentDescription="@string/list_button"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:textOff="   "
            android:textOn="   "
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.063"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text=" " />

        <ToggleButton
            android:id="@+id/blocks_button"
            android:layout_width="285dp"
            android:layout_height="360dp"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_weight="1"
            android:background="@drawable/blocks_grid_button"
            android:contentDescription="@string/list_button"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:textOff="   "
            android:textOn="   "
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/list_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.549"
            tools:text=" " />

        <ToggleButton
            android:id="@+id/slides_button"
            android:layout_width="269dp"
            android:layout_height="358dp"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_weight="1"
            android:background="@drawable/slides_grid_button"
            android:contentDescription="@string/list_button"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:textOff="   "
            android:textOn="   "
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.155"
            app:layout_constraintStart_toEndOf="@+id/blocks_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.541"
            tools:text=" " />

    </LinearLayout>

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:contentDescription="@string/back_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.008"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.982"
        app:srcCompat="@drawable/back_button" />


    <ImageButton
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/next_button" />

    <TextView
        android:id="@+id/next_text"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/coda"
        android:padding="2dp"
        android:selectAllOnFocus="true"
        android:shadowColor="#aeb3d2"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="1"
        android:text="NEXT"
        android:textAllCaps="true"
        android:textColor="@android:color/background_light"
        android:textColorHighlight="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/next_button"
        app:layout_constraintEnd_toEndOf="@+id/next_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/next_button"
        app:layout_constraintTop_toTopOf="@+id/next_button"
        app:layout_constraintVertical_bias="1.0"
        tools:shadowDx="1" />

</android.support.constraint.ConstraintLayout>